syntax = "proto3";

package product;

option go_package = "proto/product";

service ProductService {
  rpc FindOne(FindOneRequest) returns (FindOneResponse);
  rpc DecreaseQuantity(DecreaseQuantityRequest) returns (DecreaseQuantityResponse);
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
  rpc FindAll(FindAllRequest) returns (FindAllResponse);
  rpc FindByIds(FindByIdsRequest) returns (FindByIdsResponse);
}

message FindOneRequest {
  int32 id = 1;
}

message FindOneResponse {
  Product product = 1;
}

message DecreaseQuantityRequest {
  int32 id = 1;
  int32 quantity = 2;
}

message DecreaseQuantityResponse {
  bool success = 1;
}

message CreateRequest {
  string name = 1;
  string description = 2;
  double price = 3;
  int32 availableQuantity = 4;
}

message CreateResponse {
  Product product = 1;
}

message UpdateRequest {
  int32 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 availableQuantity = 5;
}

message UpdateResponse {
  Product product = 1;
}

message DeleteRequest {
  int32 id = 1;
}

message DeleteResponse {
  bool success = 1;
}

message FindAllRequest {}

message FindAllResponse {
  repeated Product products = 1;
}

message FindByIdsRequest {
  repeated int32 ids = 1;
}

message FindByIdsResponse {
  repeated Product products = 1;
}

message Empty {}

message Product {
  int32 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 availableQuantity = 5;
}